@@ -11,3 +11,4 @@ com.sun.ws.rest.impl.provider.entity.XMLJAXBElementProvider
 com.sun.ws.rest.impl.provider.entity.JSONJAXBElementProvider
 com.sun.ws.rest.impl.provider.entity.JSONArrayProvider
 com.sun.ws.rest.impl.provider.entity.JSONObjectProvider
+com.sun.ws.rest.impl.provider.entity.ReaderProvider
