@@ -11,4 +11,6 @@ com.sun.ws.rest.impl.provider.entity.XMLJAXBElementProvider
 com.sun.ws.rest.impl.provider.entity.JSONJAXBElementProvider
 com.sun.ws.rest.impl.provider.entity.JSONArrayProvider
 com.sun.ws.rest.impl.provider.entity.JSONObjectProvider
+com.sun.ws.rest.impl.provider.entity.ReaderProvider
+com.sun.ws.rest.impl.provider.entity.StreamingOutputProvider
 com.sun.ws.rest.impl.template.ViewableMessageBodyWriter
