@@ -1,0 +1,53 @@
+/*
+ * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
+ * 
+ * Copyright 2007 Sun Microsystems, Inc. All rights reserved. 
+ * 
+ * The contents of this file are subject to the terms of the Common Development
+ * and Distribution License("CDDL") (the "License").  You may not use this file
+ * except in compliance with the License. 
+ * 
+ * You can obtain a copy of the License at:
+ *     https://jersey.dev.java.net/license.txt
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ *
+ * When distributing the Covered Code, include this CDDL Header Notice in each
+ * file and include the License file at:
+ *     https://jersey.dev.java.net/license.txt
+ * If applicable, add the following below this CDDL Header, with the fields
+ * enclosed by brackets [] replaced by your own identifying information:
+ *     "Portions Copyrighted [year] [name of copyright owner]"
+ */
+
+package com.sun.ws.rest.impl.provider.entity;
+
+import java.io.IOException;
+import java.io.OutputStream;
+import java.lang.annotation.Annotation;
+import java.lang.reflect.Type;
+import javax.ws.rs.core.MediaType;
+import javax.ws.rs.core.MultivaluedMap;
+import javax.ws.rs.core.StreamingOutput;
+import javax.ws.rs.ext.MessageBodyWriter;
+
+/**
+ *
+ * @author Paul.Sandoz@Sun.Com
+ */
+public final class StreamingOutputProvider implements MessageBodyWriter<StreamingOutput> {
+
+    public boolean isWriteable(Class<?> t, Type gt, Annotation[] as) {
+        return StreamingOutput.class.isAssignableFrom(t);
+    }
+
+    public long getSize(StreamingOutput o) {
+        return -1;
+    }
+
+    public void writeTo(StreamingOutput o, Class<?> t, Type gt, Annotation[] as,
+            MediaType mediaType, MultivaluedMap<String, Object> httpHeaders, 
+            OutputStream entity) throws IOException {
+        o.write(entity);
+    }
+}
